# FuckC

./: CMakeLists.txt  FoolingAroundWithSums.c  test.c
Exercises/: ArrayList.c  ArrayList.h  Exercise3.c  Exercise4.c  exercise1.c  main.c  mathemat.h
Exercises/1/: ex1.c  ex1.h  ex2.c  ex2.h
Old_Exercises/: Exercise3.h  Exercise4.c  exercise1.h  exercise2.c  mathemat.c
QUIZZES/: MIDTERM.c  Quiz2.c
UTILITY/: List.c  List.h
